[package]
name = "citeseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
fakeit = "1.2.0"
itertools = "0.12.1"
ratatui = "0.26.0"
shellexpand = "3.1.0"
unicode-width = "0.1.11"
